crates/tests/src/snapshots/unevaluable_value_clog2_arg.snap
---
source: crates/tests/src/lib.rs
assertion_line: 366
expression: out
---
unevaluatable_value (https://doc.veryl-lang.org/book/07_appendix/02_semantic_error.html#unevaluatable_value)

  × Value, which is not evaluable at elaboration, can't be used as $clog2 argument
   ╭─[../../testcases/error/unevaluable_value_clog2_arg.veryl:6:20]
 5 │     always_comb {
 6 │         q = $clog2(d);
   ·                    ┬
   ·                    ╰── Error location
 7 │     }
   ╰────
  help:
