crates/tests/src/snapshots/unevaluable_value_onehot_arg.snap
---
source: crates/tests/src/lib.rs
assertion_line: 366
expression: out
---
unevaluatable_value (https://doc.veryl-lang.org/book/07_appendix/02_semantic_error.html#unevaluatable_value)

  × Value, which is not evaluable at elaboration, can't be used as $onehot argument
   ╭─[../../testcases/error/unevaluable_value_onehot_arg.veryl:6:21]
 5 │     always_comb {
 6 │         q = $onehot(d);
   ·                     ┬
   ·                     ╰── Error location
 7 │     }
   ╰────
  help:
