crates/tests/src/snapshots/unevaluable_value_parameter_value.snap
---
source: crates/tests/src/lib.rs
expression: out
---
unevaluatable_value (https://doc.veryl-lang.org/book/07_appendix/02_semantic_error.html#unevaluatable_value)

  × Value, which is not evaluable at elaboration, can't be used as parameter value
   ╭─[../../testcases/error/unevaluable_value_parameter_value.veryl:7:25]
 6 │     let c: u32 = 3;
 7 │     inst u_sub: SubA #( C: c );
   ·                         ┬
   ·                         ╰── Error location
 8 │ }
   ╰────
  help:
