crates/tests/src/snapshots/unevaluable_value_reset_value.snap
---
source: crates/tests/src/lib.rs
expression: out
---
unevaluatable_value (https://doc.veryl-lang.org/book/07_appendix/02_semantic_error.html#unevaluatable_value)

  × Value, which is not evaluable at elaboration, can't be used as reset value
    ╭─[../../testcases/error/unevaluable_value_reset_value.veryl:9:17]
  8 │         if_reset {
  9 │             b = a;
    ·                 ┬
    ·                 ╰── Error location
 10 │         }
    ╰────
  help:
